[gd_scene load_steps=10 format=3 uid="uid://b4yoept1uvm6"]

[ext_resource type="Texture2D" uid="uid://jll18n6eij4m" path="res://icon.svg" id="1_5ekn8"]
[ext_resource type="Script" path="res://scr/actor/npc/normal_npc/normal_npc.gd" id="1_b5ex3"]
[ext_resource type="Script" path="res://scr/actor/npc/normal_npc/fsm.gd" id="3_ppo35"]
[ext_resource type="Script" path="res://scr/actor/npc/normal_npc/state/idle.gd" id="4_np3fj"]
[ext_resource type="Script" path="res://scr/actor/npc/normal_npc/state/patrol_forward.gd" id="5_hlo80"]
[ext_resource type="Script" path="res://scr/actor/npc/normal_npc/state/patrol_backward.gd" id="6_ae1w0"]
[ext_resource type="Script" path="res://scr/actor/npc/normal_npc/state/detected.gd" id="7_3ws2k"]
[ext_resource type="Texture2D" uid="uid://jlgp6bb7tyw7" path="res://assets/npc/light_tex.png" id="7_418s6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppyvy"]
size = Vector2(10, 5)

[node name="normal_npc" type="CharacterBody2D"]
script = ExtResource("1_b5ex3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ppyvy")

[node name="Icon" type="Sprite2D" parent="."]
light_mask = 0
position = Vector2(0, -4)
scale = Vector2(0.078125, 0.109375)
texture = ExtResource("1_5ekn8")

[node name="Line2D" type="Line2D" parent="."]
width = 0.5

[node name="fsm" type="Node" parent="."]
script = ExtResource("3_ppo35")
init_state = NodePath("idle")

[node name="idle" type="Node" parent="fsm"]
script = ExtResource("4_np3fj")

[node name="patrol_forward" type="Node" parent="fsm"]
script = ExtResource("5_hlo80")

[node name="patrol_backward" type="Node" parent="fsm"]
script = ExtResource("6_ae1w0")

[node name="detected" type="Node" parent="fsm"]
script = ExtResource("7_3ws2k")

[node name="RayCast2D" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, -55)
collide_with_areas = true
collide_with_bodies = false

[node name="detect_area" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="detect_area"]
rotation = 1.57079
polygon = PackedVector2Array(0, 0, -21, -35, -11, -39, 0, -41, 11, -39, 21, -35)

[node name="PointLight2D" type="PointLight2D" parent="detect_area"]
position = Vector2(21, 0)
rotation = 1.57079
color = Color(0.94902, 0.917647, 0.615686, 1)
energy = 2.43
texture = ExtResource("7_418s6")

[node name="Sprite2D" type="Sprite2D" parent="detect_area"]
visible = false
position = Vector2(21, 0)
rotation = 1.57079
texture = ExtResource("7_418s6")
